# LLM-Docstrings

./: .gitignore  .pre-commit-hooks.yaml  README.md  docker-compose.yml  iee (1).md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_language_column.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: documentation.py  router.py
backend/app/cli/: __init__.py  precommit.py
backend/app/pipeline/: __init__.py  language_detector.py  tasks.py
backend/app/pipeline/bce/: __init__.py  extractor.py  patterns.py
backend/app/pipeline/dts/: __init__.py  synthesizer.py
backend/app/pipeline/frameworks/: __init__.py  cargotest_adapter.py  gotest_adapter.py  jest_adapter.py  junit_adapter.py  pytest_adapter.py  registry.py
backend/tests/: test_api_batch_analysis.py  test_api_create_analysis.py  test_api_export.py  test_api_management.py  test_api_properties.py  test_ast_claim_correctness.py  test_bce_properties.py  test_cascade_deletion.py  test_detect_mutations.py  test_documentation_properties.py  test_dts_prompts.py  test_dts_properties.py  test_extract_function_info.py  test_extract_raise_statements.py  test_extractor_smoke.py  test_frameworks.py  test_integration.py  test_language_detector.py  test_llm_client.py  test_parser_adapters.py  test_pipeline_status_properties.py  test_pipeline_tasks.py  test_precommit_properties.py  test_runtimes.py  test_rv_properties.py  test_rv_verifier.py  test_synthesizer.py
examples/: sample_bcv.py
(+70 files in other folders)
