[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "veridoc"
version = "0.1.0"
description = "VeriDoc BCV Detection Pipeline — detect Behavioral Contract Violations in Python docstrings"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "spacy>=3.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-genai>=1.0.0",
    "boto3>=1.34.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.98.0",
    "httpx>=0.27.0",
]

[project.scripts]
veridoc-check = "app.cli.precommit:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
